--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -1,11 +1,28 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
+    "outDir": "dist/",
+    "declaration": true,
+    "forceConsistentCasingInFileNames": true,
+    "lib": [
+      "ES2020",
+      "ESNext",
+      "DOM"
+    ],
+    "esModuleInterop": true,
+    "module": "NodeNext",
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "rootDir": "src",
+    "sourceMap": true,
+    "strict": true,
+    "target": "es2020",
     "noImplicitAny": true,
-    "module": "es6",
-    "target": "es6",
     "jsx": "react",
     "allowJs": true,
-    "moduleResolution": "node"
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "NodeNext"
   }
 }
