refactor: Move package to root
Signed-off-by: Joel Van Eenwyk <joel.vaneenwyk@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-.idea
+.idea/
+dist/
+!dist/test.html
+node_modules/
+yarn-error.log
+yarn.lock
+package-lock.json
+.pnp.cjs
+.pnp.loader.mjs
+.yarn/
