Migrate to Jest
Signed-off-by: Joel Van Eenwyk <joel.vaneenwyk@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,8 @@
     "errorLens.codeLensEnabled": true,
     "errorLens.enabled": true,
     "livePreview.serverRoot": "dist",
-    "typescript.suggest.enabled": true
+    "typescript.suggest.enabled": true,
+    "testing.coverageToolbarEnabled": true,
+    "dart.updateDevTools": false,
+    "playwright.reuseBrowser": true
 }
