--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "test": "mocha --require ts-node/register test/**/*.ts"
+    "test": "jest"
   },
   "dependencies": {
     "buffer": "^6.0.3",
@@ -18,21 +18,22 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
-    "@types/chai": "^4.3.16",
     "@types/eslint__js": "^8.42.3",
+    "@types/jest": "^29.5.12",
     "@types/mocha": "^10.0.6",
     "@types/typedarray-to-buffer": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
-    "chai": "^5.1.1",
     "eslint": "^9.5.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-webpack-plugin": "^4.0.1",
-    "mocha": "^10.4.0",
+    "jest": "^29.7.0",
     "prettier": "^3.3.2",
     "process": "^0.11.10",
+    "ts-jest": "^29.1.5",
     "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1",
     "webpack": "^5.88.2",
