Reformat files with 'prettier'
Signed-off-by: Joel Van Eenwyk <joel.vaneenwyk@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,7 @@
     "outDir": "dist/",
     "declaration": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": [
-      "ES2020",
-      "ESNext",
-      "DOM"
-    ],
+    "lib": ["ES2020", "ESNext", "DOM"],
     "esModuleInterop": true,
     "module": "NodeNext",
     "noFallthroughCasesInSwitch": true,
