--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
     "buffer": "^6.0.3",
@@ -26,6 +27,7 @@
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^9.5.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-webpack-plugin": "^4.0.1",
     "jest": "^29.7.0",
