--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The sockdrive support for emscripten",
   "license": "GPLv3",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "webpack",
     "test": "jest",
@@ -21,6 +22,7 @@
     "@eslint/js": "^9.5.0",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.5",
     "@types/mocha": "^10.0.6",
     "@types/typedarray-to-buffer": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
@@ -31,10 +33,12 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-webpack-plugin": "^4.0.1",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.2",
     "process": "^0.11.10",
+    "source-map-loader": "^5.0.0",
     "ts-jest": "^29.1.5",
-    "ts-loader": "^9.4.4",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1",
