Last changes before abandon
Signed-off-by: Joel Van Eenwyk <joel.vaneenwyk@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+  "files.associations": {
+    "*.json": "jsonc"
+  },
   "[typescript][typescriptreact][javascript][javascriptreact]": {
     "editor.formatOnPaste": false,
     "editor.formatOnSave": true,
