--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,6 @@
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "google"
-    ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12,
@@ -39,5 +36,7 @@
             120
         ]
     },
-    "ignorePatterns": ["dist/**/*"]
+    "ignorePatterns": [
+        "dist/**/*"
+    ]
 }
