--- a/package.json
+++ b/package.json
@@ -3,27 +3,31 @@
   "version": "1.0.0",
   "description": "The sockdrive support for emscripten",
   "license": "GPLv3",
+  "packageManager": "npm@10.8.1+sha512.0e9d42e92bd2318408ed81eaff2da5f78baf23ee7d12a6eed44a6e2901d0f29d7ab715d1b918ade601f72e769a824d9a5c322383f22bbbda5dd396e79de2a077",
   "private": true,
+  "scripts": {
+    "build": "webpack"
+  },
   "dependencies": {
-    "buffer": "^6.0.3",
-    "fifolock": "^1.0.0",
-    "stream-browserify": "^3.0.0",
-    "struct-fu": "^1.2.1",
-    "typedarray-to-buffer": "^4.0.0",
-    "xok": "^1.0.0"
+    "buffer": "^6",
+    "fifolock": "^1",
+    "stream-browserify": "^3",
+    "struct-fu": "^1.2",
+    "typedarray-to-buffer": "^4",
+    "xok": "^2"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.6",
-    "@types/mocha": "^10.0.1",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "eslint": "^8.48.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-webpack-plugin": "^4.0.1",
-    "process": "^0.11.10",
-    "ts-loader": "^9.4.4",
-    "typescript": "^5.2.2",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "@types/chai": "^4.3.16",
+    "@types/mocha": "^10",
+    "@typescript-eslint/eslint-plugin": "^7",
+    "@typescript-eslint/parser": "^7",
+    "chai": "^5.1.1",
+    "eslint": "<9",
+    "eslint-webpack-plugin": "^4",
+    "process": "^0.11",
+    "ts-loader": "^9",
+    "typescript": "^5",
+    "webpack": "^5",
+    "webpack-cli": "^5"
   }
 }
