--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-.idea/+
+.idea/
 dist/
 .yarn/
 node_modules/
-yarn.lock
 
+yarn.lock
 yarn-error.log
-package-lock.json
 .pnp.cjs
 .pnp.loader.mjs
