--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,12 @@
     "target": "es6",
     "jsx": "react",
     "allowJs": true,
-    "moduleResolution": "node"
-  }
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "rootDir": "."
+  },
+  "include": [
+    "./src/**/*",
+    "*.js"
+  ]
 }
