Auto-format files with prettier
Signed-off-by: Joel Van Eenwyk <joel.vaneenwyk@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,5 @@
     "moduleResolution": "node",
     "rootDir": "."
   },
-  "include": [
-    "./src/**/*",
-    "*.js"
-  ]
+  "include": ["./src/**/*", "*.js"]
 }
