--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,42 +1,29 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint"
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "object-curly-spacing": ["error", "always"],
+    "require-jsdoc": "off",
+    "quotes": ["error", "double"],
+    "indent": [
+      "error",
+      4,
+      {
+        "SwitchCase": 1,
+        "FunctionDeclaration": {
+          "parameters": "first"
+        }
+      }
     ],
-    "rules": {
-        "object-curly-spacing": [
-            "error",
-            "always"
-        ],
-        "require-jsdoc": "off",
-        "quotes": [
-            "error",
-            "double"
-        ],
-        "indent": [
-            "error",
-            4,
-            {
-                "SwitchCase": 1,
-                "FunctionDeclaration": {
-                    "parameters": "first"
-                }
-            }
-        ],
-        "max-len": [
-            "error",
-            120
-        ]
-    },
-    "ignorePatterns": [
-        "dist/**/*"
-    ]
+    "max-len": ["error", 120]
+  },
+  "ignorePatterns": ["dist/**/*"]
 }
