--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,18 @@
 {
   "compilerOptions": {
-    "outDir": "./js/dist/",
-    "noImplicitAny": true,
-    "module": "es6",
-    "target": "es6",
+    "outDir": "dist/",
+    "module": "ES6",
+    "target": "ES2020",
+    "moduleResolution": "Node",
+    "rootDir": ".",
+    "baseUrl": ".",
     "jsx": "react",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
-    "rootDir": "."
+    "noImplicitAny": true,
   },
-  "include": ["./src/**/*", "*.js"]
+  "include": [
+    "./src/**/*",
+    "*.js"
+  ]
 }
