Update 'make-img-linux.sh' to be a bit more error tolerant
Signed-off-by: Joel Van Eenwyk <joel.vaneenwyk@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "webpack",
     "test": "npm run build && npx playwright test",
-    "start": "npx http-server "
+    "start": "npx http-server ./dist"
   },
   "dependencies": {
     "buffer": "^6",
