--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,6 @@ jobs:
     - uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: playwright-report-{{ matrix.node-version }}
-        path: playwright-report/
+        name: playwright-report
+        path: playwright-report-{{ matrix.node-version }}/
         retention-days: 30
